# dj-static-revision

./: .gitignore  _tox.ini  bitbucket-pipelines.yml  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: test.yml
tests/: conftest.py  django_settings.py  test_dj_static_revision.py
