[tool.poetry]
name = "dj-static-revision"
version = "0.1.5"
description = "Revision info for Django static file"
authors = ["Nguyễn Hồng Quân <ng.hong.quan@gmail.com>"]
license = "Apache-2.0"
repository = "https://bitbucket.org/hongquan/dj-static-revision.git"
homepage = "https://bitbucket.org/hongquan/dj-static-revision/"
readme = "README.rst"
keywords = ["django", "static", "version", "cache"]
classifiers = [
    "Framework :: Django",
    "Environment :: Web Environment",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.5"
dulwich = "^0.19"
Django = "^2.0"

[tool.poetry.dev-dependencies]
pytest = "^3.10"
pytest-flakes = "^4.0"
pytest-pycodestyle = "^2.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
