[project]
authors = [
    {name = "Nguyễn Hồng Quân", email = "ng.hong.quan@gmail.com"},
]
license = {text = "Apache-2.0"}
requires-python = "<4.0,>=3.10"
name = "dj-static-revision"
description = "Revision info for Django static file"
readme = "README.rst"
keywords = [
    "django",
    "static",
    "version",
    "cache",
]
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Environment :: Web Environment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "dulwich",
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/AgriConnect/dj-static-revision"
repository = "https://github.com/AgriConnect/dj-static-revision.git"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[dependency-groups]
dev = [
    "pytest >= 8.3.5",
    "pytest-env >= 1.1.5",
]
lint = [
    "ruff >= 0.12.1",
]

[tool.ruff]
line-length = 120

target-version = "py312"

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*/migrations/*",
    "*/static/CACHE/*",
]

[tool.ruff.per-file-ignores]
"tests/test_dj_static_revision.py" = ["E402"]
